# space-opt

./: .gitignore  CMakeLists.txt  README.md  digitstring.cpp  digitstring.h  excludevalue.h  flexcharset.h  floatstring.cpp  floatstring.h  nibblestring.h  nonzero.cpp  nonzero.h  numberstring.cpp  numberstring.h  numberstring_main.cpp  optional.cpp  optional.h
src/: binarystring.cpp  binarystring.h  digitcharset.cpp  digitcharset.h  excludevalue.cpp  excludevalue.h  flexcharset.cpp  flexcharset.h  floatstring.h  integerstring.cpp  integerstring.h  maxlengtharray.cpp  maxlengtharray.h  nibblestring.cpp  nibblestring.h  nonnullptr.cpp  nonnullptr.h  nonzero.cpp  nonzero.h  numberstring.cpp  numberstring.h  optional.cpp  optional.h
test/: base.h  main.cpp  numberstring_main.cpp  numberstring_test.h  separatortest.cpp  separatortest.h  testnumberstring.cpp  testnumberstring.h
